--- a/index.html
+++ b/index.html
@@ -862,8 +862,8 @@
 
     <script>
         /* ========= CONFIG ========= */
-        const SUPABASE_URL = 'https://futsdttgpdfjaiskqkes.supabase.co';
-        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ1dHNkdHRncGRmamFpc2txa2VzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ2NTU1ODgsImV4cCI6MjA3MDIzMTU4OH0.XP_XMKX_3VUCNu2Rv2VAoGiKgcCDKp-mpWPbCiSQ-zY';
+        const SUPABASE_URL = 'https://pylxzlryqrhlpnkkwyjf.supabase.co';
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB5bHh6bHJ5cXJobHBua2t3eWpmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM1OTcxNDUsImV4cCI6MjA2OTE3MzE0NX0.1dlDfWCkpsAvX7FmCt_nlq2nxCONxCqBL4yd8eBCtYI';
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
         const APP_VERSION = '2.1.0';
         const USER_ROLES = { ADMIN: 'admin', PROCESSOR: 'processor', VIEWER: 'viewer' };
