--- a/index.html
+++ b/index.html
@@ -974,7 +974,31 @@
         }
 
         /* ===== UTILS ===== */
-        const genId = () => `id_${Date.now()}_${Math.random().toString(36).slice(2, 9)}`;
+        /* ===== ENHANCED UUID HANDLING ===== */
+        function generateUUID() {
+            if (typeof crypto.randomUUID === 'function') {
+                return crypto.randomUUID();
+            }
+            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+                const r = Math.random() * 16 | 0;
+                const v = c === 'x' ? r : (r & 0x3 | 0x8);
+                return v.toString(16);
+            });
+        }
+
+ function ensureUUID(id) {
+    if (!id) return generateUUID();
+
+    // Already a valid UUID?
+    const uuidPattern = /^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$/i;
+    if (uuidPattern.test(id)) return id;
+
+    // Convert legacy IDs to UUIDv4
+    const cleanId = String(id).replace(/[^0-9a-f]/gi, '');
+    const paddedId = (cleanId + '00000000000000000000000000000000').slice(0, 32);
+    return `${paddedId.slice(0, 8)}-${paddedId.slice(8, 12)}-4${paddedId.slice(13, 16)}-${
+        ['8','9','a','b'][Math.floor(Math.random() * 4)]}${paddedId.slice(17, 20)}-${paddedId.slice(20)}`;
+}
 
         const sendTG = msg => {
             if (!TELEGRAM_BOT || !TELEGRAM_CHAT) return;
