--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,16 @@
         }
 
      /* ===== ENHANCED UUID HANDLING ===== */
-
+function generateUUID() {
+            if (typeof crypto.randomUUID === 'function') {
+                return crypto.randomUUID();
+            }
+            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+                const r = Math.random() * 16 | 0;
+                const v = c === 'x' ? r : (r & 0x3 | 0x8);
+                return v.toString(16);
+            });
+        }
         function genId() {
     if (typeof crypto.randomUUID === 'function') {
         return crypto.randomUUID();
