--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@ function generateUUID() {
     });
 }
  function ensureUUID(id, generateId) {
-    if (!id) return generateId();
+    if (!id) return generateUUID(); // ✅ correct
     const uuidPattern = /^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$/i;
     if (typeof id === 'string' && uuidPattern.test(id)) {
         return id;
